# paper-management-system

./: .env.example  .gitignore  ABLESCI_DOWNLOAD_USAGE.md  CHANGELOG.md  DOWNLOAD_PROCESS_README.md  README.md  SECURITY.md  SKILL.md  ablesci_after_download.sh  after_download.sh  auto_index.sh  config.example.yaml  config.py  extract_fulltext.py  paper_management.py  process_ablesci_download.sh  pyproject.toml
docs/: MIGRATION.md
scripts/: ai_summarize.py
